--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test": "node node_modules/jest/bin/jest.js --watch"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+			"node_modules/?!(react-navigation)"
+		]
   },
   "dependencies": {
     "expo": "^15.1.0",
