--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "demo",
+  "name": "rnnm-ts",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "jest-expo": "^0.3.0",
-    "react-native-scripts": "0.0.27",
-    "react-test-renderer": "~15.4.1"
+    "@types/react": "^16.0.0",
+    "@types/react-native": "^0.47.0",
+    "@types/react-navigation": "^1.0.16",
+    "jest-expo": "~19.0.5",
+    "react-native-scripts": "1.1.0",
+    "react-test-renderer": "16.0.0-alpha.12",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -13,20 +18,17 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js"
   },
   "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-			"node_modules/?!(react-navigation)"
-		]
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^15.1.0",
-    "mobx": "^3.1.9",
-    "mobx-react": "^4.1.5",
-    "react": "~15.4.0",
-    "react-native": "0.42.3",
-    "react-navigation": "^1.0.0-beta.7"
+    "expo": "^19.0.1",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
+    "react": "16.0.0-alpha.12",
+    "react-native": "^0.46.1",
+    "react-navigation": "^1.0.0-beta.11"
   }
 }
